# python-setuptools

./: .gitignore  MANIFEST.in  OLD_README.md  README.md  README2.md  __setup.py  pyproject.toml  setup.py
rahulg/: __init__.py
rahulg/nested/: __init__.py
rahulg/nested/inner/: __init__.py
tests/: __init__.py  simple_test.py  start.py
